--- a/css/styles.css
+++ b/css/styles.css
@@ -578,10 +578,12 @@ address {
     letter-spacing: 0.02em;
   }
 }
-
+.section-th .container {
+  padding: 0 28px;
+}
 .section-th {
   background-color: #f4f4fd;
-  padding: 120px 0;
+  padding: 96px 0;
 }
 
 .section-th-ht {
@@ -599,12 +601,13 @@ address {
 
 .section-th-ul {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: space-between;
-  gap: 24px;
+  gap: 72px;
 }
 
 .section-th-li {
+  height: 100%;
   box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
     0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
   border-radius: 0 0 4px 4px;
@@ -612,12 +615,12 @@ address {
 
 .section-th-img {
   background-color: #ffffff;
-  width: 264px;
-  height: 260px;
+  width: 100%;
+  height: 100%;
 }
 
 .section-th-div {
-  padding: 32px 0;
+  padding: 32px 16px;
 }
 
 .section-th-hth {
@@ -686,6 +689,32 @@ address {
   background-color: #ffffff;
 }
 
+@media screen and (min-width: 768px) {
+  .section-th .container {
+    padding: 0 108px;
+  }
+  .section-th-ul {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 24px;
+  }
+  .section-th-li {
+    width: calc((100% - 24px) / 2);
+  }
+}
+@media screen and (min-width: 1158px) {
+  .section-th .container {
+    padding: 0;
+  }
+  .section-th {
+    padding: 120px 0;
+  }
+  .section-th-li {
+    width: calc((100% - 3 * 24px) / 4);
+  }
+}
 .section-fr {
   padding: 120px 0;
 }
