--- a/css/styles.css
+++ b/css/styles.css
@@ -716,7 +716,7 @@ address {
   }
 }
 .section-fr {
-  padding: 120px 0;
+  padding: 96px 0;
 }
 
 .section-fr-ht {
@@ -742,7 +742,7 @@ address {
 .section-fr-li {
   box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
     0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
-  width: calc((100% - 2 * 24px) / 3);
+  width: 100%;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -796,6 +796,26 @@ address {
   line-height: 150%;
   letter-spacing: 0.02em;
   color: #434455;
+}
+
+@media screen and (min-width: 768px) {
+  .section-fr-ul {
+    column-gap: 24px;
+    row-gap: 72px;
+  }
+  .section-fr-li {
+    width: calc((100% - 24px) / 2);
+  }
+}
+@media screen and (min-width: 1158px) {
+  .section-fr {
+    padding: 120px 0;
+  }
+  .section-fr-ul {
+  }
+  .section-fr-li {
+    width: calc((100% - 2 * 24px) / 3);
+  }
 }
 
 .visually-hidden {
