--- a/css/styles.css
+++ b/css/styles.css
@@ -400,7 +400,7 @@ address {
   background-color: #404bbf;
 }
 
-@media (min-resolution: 192dpi) {
+@media (min-resolution: 2x) {
   .section-f {
     background-image: linear-gradient(
         rgba(46, 47, 66, 0.7),
@@ -430,7 +430,7 @@ address {
     color: #fff;
     margin-bottom: 36px;
   }
-  @media (min-resolution: 192dpi) {
+  @media (min-resolution: 2x) {
     .section-f {
       background-image: linear-gradient(
           rgba(46, 47, 66, 0.7),
@@ -462,7 +462,7 @@ address {
     margin-bottom: 48px;
   }
 
-  @media (min-resolution: 192dpi) {
+  @media (min-resolution: 2x) {
     .section-f {
       background-image: linear-gradient(
           rgba(46, 47, 66, 0.7),
